--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -8,10 +8,15 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: make
+
+    # Install X11 development headers
+    - name: Install dependencies
+      run: sudo apt-get update && sudo apt-get install -y libx11-dev
+
+    # Build your project
+    - name: Build with Make
       run: make
